arreglé el <script> que lee el id de la sesion actual , que se usa para q js tenga una variable con la seccion actual para así poder hacer un mini sistema que te permita borrar comentarios si sos el ""dueño de ese comentario

--- a/templates/index/ComentariosParaTodos.html
+++ b/templates/index/ComentariosParaTodos.html
@@ -51,7 +51,7 @@
       <div id="commentsSection"></div> 
   </main>
 <script>
-  const usuarioActual = {{ session.get('id_usu') | tojson }}; // NO BORRAAAAR ESTA LINEA WACHO
+    window.usuarioActual = {{ current_user.id or 'null' }}; // NO BORRAAAAR ESTA LINEA WACHO
 </script>
 <script src="/static/js/comentarios.js"></script>
 <script src="/static/js/barralateral.js"></script>
