es de prueba  para     q jul vea

--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -49,7 +49,8 @@
     
     </div>
     </div>
-    <div class="footer">  
+    <div class="footer"> 
+        <p>hola</p> 
     </div>
     <script src="/static/js/comentarios.js"></script>
     <script src="/static/js/barralateral.js"></script>
