--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -30,7 +30,7 @@
         <a class="separador3" href="/templates/index/indexcentralayuda.html"><img src="/static/utils/img/corazon4.png" alt="Soporte" class="soporte3"></a>
         <a class="separador3" href="#"><img src="/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
         <a class="separador3" href="#"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
-        <a class="separador3" href="#"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
+        <a class="separador3" href="#"><img src="/static/utils/img/hotultimointento.png" alt="salida" class="opcion6"></a>
     </div>
     </div>
     <!--Fin de la barra lateral-->
@@ -50,7 +50,7 @@
     </div>
     </div>
     <div class="footer"> 
-        <p>hola</p> 
+
     </div>
     <script src="/static/js/comentarios.js"></script>
     <script src="/static/js/barralateral.js"></script>
