esto es de prueba no lo tomen en cuenta

--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -47,7 +47,8 @@
     
     </div>
     </div>
-    <div class="footer">  
+    <div class="footer">
+    <p>holal</p>  
     </div>
     <script src="/static/js/comentarios.js"></script>
     <script src="/static/js/barralateral.js"></script>
