hice la parte de validacion de codigo pero no funciono del todo

--- a/templates/index/1ProvisorioActuContra.html
+++ b/templates/index/1ProvisorioActuContra.html
@@ -28,17 +28,17 @@
       <form id="registro">
         <div class="input-group">
           <label for="password">Nueva Contraseña</label>
-          <input type="password" id="password" name="password" required />
+          <input type="password" id="newpassword" name="password" required />
         </div>
         <div class="input-group">
           <label for="confirm">Confirmar contraseña</label>
-          <input type="password" id="confirm" name="confirm" required />
+          <input type="password" id="newconfirm" name="confirm" required />
         </div>
         <button type="submit">Actualizar Contraseña</button>
       </form>
     </section>
   </main>
 
-  <script src="/static/js/registro.js"></script>
+  <script src="/static/js/CambiarContra.js"></script>
 </body>
 </html>
