--- a/templates/index/1ProvisorioOTP.html
+++ b/templates/index/1ProvisorioOTP.html
@@ -25,10 +25,10 @@
 
     <section class="formulario">
       <h1>¡Hola de vuelta!</h1>
-      <form id="registro">
+      <form id="otp">
         <div class="input-group">
           <label for="name">Codigo De Verificacion:</label>
-          <input type="text" id="name" name="name" required />
+          <input type="text" id="cod" name="name" required />
         </div>
         <button type="submit">Validar Codigo</button>
       </form>
