--- a/templates/index/1ProvisorioActuContra.html
+++ b/templates/index/1ProvisorioActuContra.html
@@ -25,7 +25,7 @@
 
     <section class="formulario">
       <h1>¡Lo lograste! <br> Reestablece tu contraseña</h1>
-      <form id="registro">
+      <form id="correo-recuperacion">
         <div class="input-group">
           <label for="password">Nueva Contraseña</label>
           <input type="password" id="newpassword" name="password" required />
@@ -39,6 +39,6 @@
     </section>
   </main>
 
-  <script src="/static/js/CambiarContra.js"></script>
+  <script src="/static/js/ActuContra.js"></script>
 </body>
 </html>
