--- a/templates/index/1ProvisorioEnviarCorreo.html
+++ b/templates/index/1ProvisorioEnviarCorreo.html
@@ -36,6 +36,6 @@
     </section>
   </main>
 
-  <script src="/static/js/CambiarContra.js"></script>
+  <script src="/static/js/EnviarCorreo.js"></script>
 </body>
 </html>
