--- a/templates/index/indexiniciarsesion.html
+++ b/templates/index/indexiniciarsesion.html
@@ -31,7 +31,7 @@
         <input type="password" id="password" name="password" placeholder="CONTRASEÑA" required />
 
         <div class="links">
-          <a href="#">¿OLVIDÓ SU CONTRASEÑA? RECUPERAR</a>
+          <a href="/cambiar">¿OLVIDÓ SU CONTRASEÑA? RECUPERAR</a>
         </div>
                 <div class="links">
           <a href="#">Entrar como invitado</a>
