--- a/templates/index/1ProvisorioEnviarCorreo.html
+++ b/templates/index/1ProvisorioEnviarCorreo.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ingresar Correo - CET</title>
   <link rel="stylesheet" href="/static/css/estilocrearcuenta.css"/>
-   <meta name="csrf-token" content="{{ csrf_token() }}">
+  <meta name="csrf-token" content="{{ csrf_token() }}">
 </head>
 <body>
 
@@ -18,14 +18,14 @@
   <main class="contenedor">
     <section class="presentacion">
       <figure class="cota">
-        <figcaption class="globo">¡Hola pon tu correo pequeño olvidadizo!</figcaption>
+        <figcaption class="globo">¡Hola pon tu correo!</figcaption>
         <img class="masimg" src="/static/utils/img/zettinocrea.png" alt="Mascota Zettino" />
       </figure>
     </section>
 
     <section class="formulario">
       <h1>¡Otra vez por aqui!</h1>
-      <form id="correo-recuperacion">
+      <form id="correo-recuperacion" data-tipo="registro">
         <div class="input-group">
           <label for="email">Correo electrónico</label>
           <input type="email" id="email" name="email" required />
@@ -37,5 +37,6 @@
   </main>
 
   <script src="/static/js/EnviarCorreo.js"></script>
+  <script src="/static/js/VerificarCorreoRegistro.js"></script>
 </body>
 </html>
