--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -31,8 +31,7 @@
           <input type="text" id="name" name="name" required />
         </div>
         <div class="input-group">
-          <label for="email">Correo electrónico</label>
-          <input type="email" id="email" name="email" required />
+          <input type="hidden" id="email" name="email" readonly />
         </div>
         <div class="input-group">
           <label for="password">Contraseña</label>
@@ -44,7 +43,7 @@
         </div>
         <button type="submit">REGISTRARSE</button>
       </form>
-      <p class="recuperar">¿Olvidó su contraseña? <a href="#">RECUPERAR</a></p>
+      <p class="recuperar">¿Olvidó su contraseña? <a href="/cambiar">RECUPERAR</a></p>
     </section>
   </main>
 
