--- a/templates/index/ComentariosParaTodos.html
+++ b/templates/index/ComentariosParaTodos.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Comentarios con Menú</title>
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
-   <link rel="stylesheet" href="/static/css/barralateral.css"/>
-   <link rel="stylesheet" href="/static/css/ApartadoFuentes.css"/>
-    <meta name="csrf-token" content="{{ csrf_token() }}">
+  <link rel="stylesheet" href="/static/css/barralateral.css"/>
+  <link rel="stylesheet" href="/static/css/ApartadoFuentes.css"/>
+  <meta name="csrf-token" content="{{ csrf_token() }}">
 </head>
 <body>
   <div id="toggle">
@@ -52,7 +52,8 @@
   </main>
 <!-- Seguridad CSP: pasar ID por meta -->
     <meta name="usuario-id" content="{{ current_user.id or 'null' }}"> <!--NO BORRAR ESTA LINEA-->
-
+    
+<script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.5/dist/purify.min.js"></script>
 <script src="/static/js/comentarios.js"></script>
 <script src="/static/js/barralateral.js"></script>
 </body>
