--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -42,6 +42,7 @@
           <input type="password" id="confirm" name="confirm" required />
         </div>
         <button type="submit">REGISTRARSE</button>
+        <div id="mensaje" class="mensaje"></div>
       </form>
       <p class="recuperar">¿Olvidó su contraseña? <a href="/cambiar">RECUPERAR</a></p>
     </section>
