--- a/templates/index/indexusuario.html
+++ b/templates/index/indexusuario.html
@@ -25,18 +25,17 @@
         <a class="separador3" href="#"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
         <a class="separador3" href="#"><img src="/static/utils/img/hotultimointento.png" alt="salida" class="opcion6"></a>
     </div> 
-    <div class="fondo-perfile">
   <div class="profile-container">
-   
     <div class="avatar"></div>
     <div class="user-info">
       <h2>Nombre de Usuario</h2>
     </div>
     <div class="action-buttons">
       <button>Editar perfil</button>
-    
     </div>
-  </div>
+    <div class="caja-comentarios1">
+      <p id="comentarios">Mis comentarios. . .</p>
+    </div>
   </div>
   
      <script src="/static/js/comentarios.js"></script>
