intentando solucionar el com

--- a/templates/index/confirmacionceo.html
+++ b/templates/index/confirmacionceo.html
@@ -10,7 +10,7 @@
     <h3>Verificación</h3>
   <p>Ingresa el código que le enviamos a su gmail</p>
 
-  <!-- Campos para ingresar los números del código -->
+  <!-- Campoooos para ingresar los números del código -->
   <form>
     <div class="codigo-fondo">
      <input type="text" name="codigo"
