--- a/templates/index/confirmacionceo.html
+++ b/templates/index/confirmacionceo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h3>Verificación</h3>
-  <p>Ingresa el código que le enviamos a su gmail</p>
+  <p>Ingrese el código que le enviamos a su gmail</p>
 
   <!-- Campoooos para ingresar los números del código -->
   <form>
