--- a/templates/index/ComentariosParaTodos.html
+++ b/templates/index/ComentariosParaTodos.html
@@ -52,6 +52,7 @@
   </main>
 <!-- Seguridad CSP: pasar ID por meta -->
     <meta name="usuario-id" content="{{ current_user.id or 'null' }}"> <!--NO BORRAR ESTA LINEA-->
+    <meta name="usuario-rol" content="{{ current_user.rol }}">
     
 <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.5/dist/purify.min.js"></script>
 <script src="/static/js/comentarios.js"></script>
