--- a/templates/index/indexiniciarsesion.html
+++ b/templates/index/indexiniciarsesion.html
@@ -6,6 +6,7 @@
   <title>Inicio de Sesión - CET</title>
   <link rel="stylesheet" href="/static/css/estiloiniciarsesion.css"/>
   <meta name="csrf-token" content="{{ csrf_token() }}">
+  <meta name="usuario-rol" content="{{ current_user.rol }}">
 </head>
 <body>
 
