--- a/templates/index/paneladmin.html
+++ b/templates/index/paneladmin.html
@@ -109,6 +109,6 @@
     </div>
     
     <!-- Incluye el script de JavaScript al final del body -->
-
+ <!-- ACA IRIA EL <SCRIPT> Q VAYA A PANEL.JS Y HACER CARGAR LOS USUARIOS AL PANEL ETC ETC-->
 </body>
 </html>
