puse autocomplete=off para que no aparezcan sugerencias a la hora de escribir algo en los input/formularios

--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -26,7 +26,7 @@
 
     <section class="formulario">
       <h1>¡Bienvenido!</h1>
-      <form id="registro">
+      <form id="registro" autocomplete="off">
         <div class="input-group">
           <label for="name">Nombre de usuario</label>
           <input type="text" id="name" name="name" required />
