--- a/templates/index/indexdseptimo.html
+++ b/templates/index/indexdseptimo.html
@@ -25,7 +25,7 @@
     </div>
     <!--Fin de la barra lateral-->
         <div class="header">
-            <form class="buscador-logo">
+            <form class="buscador-logo" autocomplete="off">
                 <div class="buscador-logo2">
                     <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
 
