--- a/templates/index/paneladmin.html
+++ b/templates/index/paneladmin.html
@@ -40,7 +40,7 @@
     </section>
 
 <section class="caja-comentario">
-      <form id="commentForm">
+      <form id="commentForm" autocomplete="off">
         <input type="text" id="titulo" name="titulo" placeholder="Título de la pregunta" required>
         <textarea id="comentario" name="comentario" placeholder="Escribe tu comentario..." required></textarea>
         <input type="hidden" id="id_mat" name="id_mat" value="{{ id_mat }}">
