--- a/templates/index/1ProvisorioActuContra.html
+++ b/templates/index/1ProvisorioActuContra.html
@@ -25,7 +25,7 @@
 
     <section class="formulario">
       <h1>¡Lo lograste! <br> Reestablece tu contraseña</h1>
-      <form id="correo-recuperacion">
+      <form id="correo-recuperacion" autocomplete="off">
         <div class="input-group">
           <label for="password">Nueva Contraseña</label>
           <input type="password" id="newpassword" name="password" required />
