--- a/templates/index/1ProvisorioEnviarCorreo.html
+++ b/templates/index/1ProvisorioEnviarCorreo.html
@@ -25,7 +25,7 @@
 
     <section class="formulario">
       <h1>¡Otra vez por aqui!</h1>
-      <form id="correo-recuperacion" data-tipo="registro">
+      <form id="correo-recuperacion" data-tipo="registro" autocomplete="off">
         <div class="input-group">
           <label for="email">Correo electrónico</label>
           <input type="email" id="email" name="email" required />
