--- a/templates/index/1ProvisorioLoginOTP.html
+++ b/templates/index/1ProvisorioLoginOTP.html
@@ -25,7 +25,7 @@
 
     <section class="formulario">
       <h1>¡Hola de vuelta!</h1>
-      <form id="otp">
+      <form id="otp" autocomplete="off">
         <div class="input-group">
           <label for="name">Codigo De Verificacion:</label>
           <input type="text" id="cod" name="name" required />
