--- a/templates/index/dinformaticaindex.html
+++ b/templates/index/dinformaticaindex.html
@@ -26,7 +26,7 @@
     </div>
     <!--Fin de la barra lateral-->
      <div class="header">
-        <form class="buscador-logo">
+        <form class="buscador-logo" autocomplete="off">
             <div class="buscador-logo2">
             <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
             <input class="buscador" placeholder=" Preguntas..." type="text"> 
