--- a/templates/index/indexcomentario.html
+++ b/templates/index/indexcomentario.html
@@ -28,7 +28,7 @@
     </header>
 
     <section class="caja-comentario">
-      <form id="commentForm">
+      <form id="commentForm" autocomplete="off">
         <input id="titulo" name="titulo" placeholder="Título..." required>
         <label for="comentario" class="sr-only">Escribe tu comentario</label>
         <textarea id="comentario" name="comentario" placeholder="Escribe tu comentario..." required></textarea>
