arregle unas cositas para que funcione el eliminar usuario y para que se muestren correctamente los datos. la barra lateral te deja abrirla solo en comentarios por el main que tiene, hay que poner el main con los roles de usuario en TODOS los html que se pueda abrir la barra lateral

--- a/templates/index/ComentariosParaTodos.html
+++ b/templates/index/ComentariosParaTodos.html
@@ -51,8 +51,8 @@
       <div id="commentsSection"></div> 
   </main>
 <!-- Seguridad CSP: pasar ID por meta -->
-    <meta name="usuario-id" content="{{ current_user.id or 'null' }}"> <!--NO BORRAR ESTA LINEA-->
-    <meta name="usuario-rol" content="{{ current_user.rol }}">
+    <meta name="usuario-id" content="{{ current_user.id or 'null' }}">
+    <meta name="usuario-rol" content="{{ current_user.rol or 'anonimo' }}">
     
 <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.5/dist/purify.min.js"></script>
 <script src="/static/js/comentarios.js"></script>
