--- a/templates/index/indexin5to.html
+++ b/templates/index/indexin5to.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/d5to.css">
     <link rel="stylesheet" href="/static/css/barralateral.css"/>
+    <meta name="usuario-id" content="{{ current_user.id or 'null' }}">
+    <meta name="usuario-rol" content="{{ current_user.rol or 'anonimo' }}">
     <title>programacion  y programacion cuarto</title>
 </head>
 <body>
