--- a/templates/index/indexusuario.html
+++ b/templates/index/indexusuario.html
@@ -6,6 +6,8 @@
     <title>usuario</title>
       <link rel="stylesheet" href="/static/css/usuario.css">
     <link rel="stylesheet" href="/static/css/barralateral.css">
+    <meta name="usuario-id" content="{{ current_user.id or 'null' }}">
+    <meta name="usuario-rol" content="{{ current_user.rol or 'anonimo' }}">
   
 </head>
 <body>
