--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -37,6 +37,8 @@
     <!--Fin de la barra lateral-->
     <div class="cuerpo1">
         <button id="enable-notifications-btn" style="padding: 10px; margin: 20px; cursor: pointer;">Activar Notificaciones</button>
+        <!-- <button id="probar-notificacion">Probar notificación push</button> -->
+
              <br>
     <div class="bloque-superpuesto">
         <a href=' /programacion'>
@@ -53,6 +55,7 @@
     </div>
     <div class="footer">  
     </div>
+    <!-- <script src="/static/js/testnotificaciones.js"></script> es una prueba para ver si funcionan ! -->
     <script src="/static/js/notificaciones.js"></script>
     <script src="/static/js/comentarios.js"></script>
     <script src="/static/js/barralateral.js"></script>
