--- a/templates/index/panelnotificaciones.html
+++ b/templates/index/panelnotificaciones.html
@@ -48,8 +48,8 @@
     
 <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.5/dist/purify.min.js"></script>
 <script src="/static/js/panelnotificaciones.js"></script>
-<script src="/static/js/notificaciones.js"></script>
-<script src="/static/js/comentarios.js"></script>
+<!-- <script src="/static/js/notificaciones.js"></script>
+<script src="/static/js/comentarios.js"></script> -->
 <script src="/static/js/barralateral.js"></script>
 </body>
 </html>
