--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -36,18 +36,15 @@
     </div>
     <!--Fin de la barra lateral-->
     <div class="cuerpo1">
-        <button id="enable-notifications-btn" style="padding: 10px; margin: 20px; cursor: pointer;">Activar Notificaciones</button>
+        <div class="notificaciones-bloque">
+        <button class="enable-notifications-btn">Activar Notificaciones</button>
+        </div>
         <!-- <button id="probar-notificacion">Probar notificación push</button> -->
-
-             <br>
-    <div class="bloque-superpuesto">
-        <a href=' /programacion'>
+    <div class="bloque-superpuesto primero1">
         <a href='/programacion' class="texto-superpuesto">programacion</a> 
-        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
         </a>
     </div>
     <div class="bloque-superpuesto">
-        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
         <a href='/informatica' class="texto-superpuesto">informatica</a>
     </div>
     
