--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -36,7 +36,15 @@
     </div>
     <!--Fin de la barra lateral-->
     <div class="cuerpo1">
-        <button id="enable-notifications-btn" style="padding: 10px; margin: 20px; cursor: pointer;">Activar Notificaciones</button>
+        <div id="notificacion-modal" class="modal">
+            <div class="modal-content">
+                <h3>🔔 ¿Querés recibir notificaciones?</h3>
+                <p>Te avisaremos cuando alguien responda tus preguntas o te dé like.</p>
+                <button id="btn-permitir">Permitir</button>
+                <button id="btn-no-permitir">No permitir</button>
+            </div>
+        </div>
+</div>
         <!-- <button id="probar-notificacion">Probar notificación push</button> -->
 
              <br>
