cambie le nombre del css de tuerca  a configuracion.css

--- a/templates/index/tuercabarralateral.html
+++ b/templates/index/tuercabarralateral.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Configuración - Mi Foro</title>
-    <link rel="stylesheet" href="estilos.css">
-    <link rel="stylesheet" href="configuracion.css">
-</head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/estilohomeoinicio.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/configuracion.css') }}">
 <body>
     <main class="contenido-principal">
         <div class="contenedor-configuracion">
